--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /LoginFormTest/LoginFormTest/obj/Debug
+/LoginFormTest/.vs/LoginFormTest
+/LoginFormTest/LoginFormTest.sln.DotSettings.user
+/LoginFormTest/LoginFormTest/bin/Debug/App_Data
